--- a/WDLesson2_1Practical/style.css
+++ b/WDLesson2_1Practical/style.css
@@ -9,15 +9,31 @@ selector{
 
 
 /* Challenge 1: Change color of the text for all the headings size 3 to blue */
-
+h3{
+  color:blue;
+}
 /* Challenge 2: Change the size for the font for all headings size 1 to 60pt */
-      
+h1 {
+  font-size: 60pt;
+}      
 /* Challenge 3: Change the style of the font for all spans to italic */
-
+span {
+  font-style: italic;
+}
 /* Challenge 4: Change the family of font being used for all paragraphs to "Arial" */
+p {
+  font-family: Arial;
+}
 
 /* Challenge 5: Change the family of font being used for all lists to "Comic Sans MS".  What element creates a list? */
-
+ul, ol, li {
+  font-family: "Comic Sans MS";
+}
 /* Chalenge 6: Change the background color of the div to blue, color of the text to white and the weight of the font to bold. 
+div {
+  background-color: blue;
+  color: white;
+  font-weight: bold;
+}
       
 Hint:  You can specify several CSS rules for one element by separating the rules with commas.  Look at some example on w3schools */
