--- a/WDLesson2_2Practical/style.css
+++ b/WDLesson2_2Practical/style.css
@@ -6,12 +6,16 @@
 */
 
 /* Challenge 5: Change the family of all elements to Arial */
-
+.{
+  font-family: Arial;
+}
 /* Challenge 6: Change the background color to blue, the color of the text to white for all elements 
 with a class of "info" */
 
 /* Challenge 7: Add a border of 2px solid red for all elements with a class of "highlight" */
-
+.highlight{
+ border:2px solid red; 
+}
 /* Challenge 8: Align the text in the center and drop a shadow on the text of 2px 2px yellow  for 
 all elements with a class of "special"
 */
