updates lesson 2.21,2.2 practical

--- a/WDLesson2_2Practical/style.css
+++ b/WDLesson2_2Practical/style.css
@@ -28,3 +28,6 @@ all elements with a class of "special"
 }
 /* Challenge Bonus: Create a CSS rule for a class named "shadow".  
 Apply a shadow to the box around the elements that is 2px 2px  gray. */ 
+.shadow {
+  box-shadow: 2px 2px gray;
+}
