--- a/WDLesson2_1Practical/style.css
+++ b/WDLesson2_1Practical/style.css
@@ -30,5 +30,9 @@ ul, ol, li {
   font-family: "Comic Sans MS";
 }
 /* Chalenge 6: Change the background color of the div to blue, color of the text to white and the weight of the font to bold. 
-     
-Hint:  You can specify several CSS rules for one element by separating the rules with commas.  Look at some example on w3schools */
+div {
+  background-color: blue;
+  color: white;
+  font-weight: bold;
+}
+t:  You can specify several CSS rules for one element by separating the rules with commas.  Look at some example on w3schools */
